--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
   },
-  "homepage" : "http://myname.github.io/myapp",
+  "homepage": "http://myname.github.io/myapp",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -30,5 +30,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
