--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
   },
-  "homepage": "http://myname.github.io/myapp",
+  "homepage": "https://incontextseo.github.io/my-react-app-deaux/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
